# -Agentic_Infrastructure

./: .coderabbit.yaml  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  setup-chimera.ps1
.cursor/rules/: agent.mdc
.github/: dependabot.yml
.github/workflows/: main.yml
docs/: BRANCH_STRATEGY.md  GITHUB_SPEC_KIT_GUIDE.md  SKILL_CONTRACTS_VALIDATION_REPORT.md  SPEC_VERIFICATION_REPORT.md
docs/adr/: 0001-hierarchical-swarm-architecture.md  0002-mcp-native-integration.md  0003-polyglot-persistence.md  0004-hitl-judge-centric-safety.md  0005-fastapi-react-frontend.md  README.md
research/: architecture_strategy.md  mcp_log.md  research.md  tooling_strategy.md
scripts/: spec_check.py
skills/: README.md  __init__.py
skills/skill_content_generator/: __init__.py  interface.py
skills/skill_moltbook_trend_fetcher/: __init__.py  interface.py
skills/skill_wallet_manager/: __init__.py  interface.py
specs/: _meta.md  frontend.md  functional.md  openclaw_integration.md  technical.md
src/project_chimera/: __init__.py
tests/: README.md  test_dockerfile.py  test_mcp_connection.py  test_moltbook_trend_fetcher.py  test_skills_interface.py  test_spec_alignment.py
