[project]
name = "project-chimera"
version = "0.1.0"
description = "Project Chimera: Autonomous Influencer Infrastructure"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core dependencies will be added as we build
    # For now, keeping minimal for Task 1.3 deliverable
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

