[project]
name = "project-chimera"
version = "0.1.0"
description = "Project Chimera: Autonomous Influencer Infrastructure"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core dependencies will be added as we build
    # For now, keeping minimal for Task 1.3 deliverable
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# CI installs this repo as an editable package (`pip install -e .`).
# Hatchling needs an explicit package selection because this repo is currently
# spec/test-first and does not yet have a full application layout.
packages = ["src/project_chimera", "skills"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

